--- a/src/formularios/frmComprasDetalle.form
+++ b/src/formularios/frmComprasDetalle.form
@@ -332,11 +332,11 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="0">
+                <Column editable="true" title="Sucursal" type="java.lang.Object"/>
                 <Column editable="true" title="idCompra" type="java.lang.Object"/>
-                <Column editable="true" title="1" type="java.lang.Object"/>
-                <Column editable="true" title="2" type="java.lang.Object"/>
-                <Column editable="true" title="3" type="java.lang.Object"/>
-                <Column editable="true" title="4" type="java.lang.Object"/>
+                <Column editable="true" title="Producto" type="java.lang.Object"/>
+                <Column editable="true" title="Cantidad" type="java.lang.Object"/>
+                <Column editable="true" title="Precio Unitario" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
